--- a/public/css/header.css
+++ b/public/css/header.css
@@ -11,17 +11,13 @@
 }
 body{
     margin: 0;
-    background-color: black;
-    font-family: 'dragon-hunter-font', 'Times New Roman', Times, serif;
-    text-align: center;
-    color: #d8a444;
 }
 header{
     display: flex;
-    align-content: center;
+    align-items: center;
     justify-content: center;
     background-color: white;
-    padding: 0.1rem;
+    padding: 0.5rem;
     border-style: solid;
     border-color: #d8a444;
 }
@@ -37,7 +33,9 @@ a{
     text-decoration: none;
 }
 #logo img {
-    width: 15rem;
+    width: 100px; /* Try a slightly smaller size */
+    height: auto;
+    display: block;
 }
 
 #logo {
