--- a/public/character/character.css
+++ b/public/character/character.css
@@ -36,12 +36,14 @@ header {
 
 /* Left Panel */
 .left-panel {
+    display: flex;
     width: 25%;
     flex-direction: column;
 }
 
 .char_button{
     display: flex;
+    margin: 0.5rem;
 }
 
 .char_button a {
@@ -51,6 +53,13 @@ header {
     border-radius: 0.5rem;
     width: 10rem;
     color: #d8a444;
+}
+
+#save{
+    background-color: white;
+}
+#selected{
+    background-color: white;
 }
 
 /* Center Panel */
@@ -89,12 +98,60 @@ header {
 /* Right Panel */
 .right-panel {
     width: 25%;
-    padding: 20px;
-    background-color: #292929;
-    border-radius: 10px;
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+    overflow-y: auto;
+    background-color: white;
+    border-style: solid;
+    border-radius: 0.5rem;
+    justify-content: center;
+    align-content: flex-start;
+    padding: 1rem;
+   
 }
 
+.right-panel img{
+    width: 10rem;
+    height: 10rem;
+    border-style: solid;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+}
 
+.slider{
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100%;
+    height: 0.5rem;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    background: #d8a444;
+    border-radius: 1rem;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Override default look */
+    appearance: none;
+    width: 1rem; /* Set a specific slider handle width */
+    height: 1rem; /* Slider handle height */
+    background: #d8a444; /* Green background */
+    cursor: pointer; /* Cursor on hover */
+    border-radius: 1rem;
+}
+
+.slider::-moz-range-thumb {
+    width: 1rem; /* Set a specific slider handle width */
+    height: 1rem; /* Slider handle height */
+    background: #d8a444; /* Green background */
+    cursor: pointer; /* Cursor on hover */
+  }
 
 
 
