--- a/public/dm/dm.css
+++ b/public/dm/dm.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Garamond', serif;
     margin: 0;
     padding: 0;
-    background-color: #1a1a1a;
+    background-color: #ffc760;;
     color: #ddd;
     text-align: center;
 }
