--- a/public/dm/dm.css
+++ b/public/dm/dm.css
@@ -11,7 +11,8 @@ header {
     background-color: white;
     text-align: center;
     padding: 1rem 0;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+    border-style: solid;
+    border-color: #d8a444;
     position: relative;
 }
 
@@ -102,6 +103,7 @@ header {
     border: 2px solid white;
     cursor: pointer;
     overflow: hidden;
+    border-radius: 50%;
     padding: 0;
     transition: transform 0.2s;
 }
@@ -149,13 +151,16 @@ header {
     border: 2px solid white;
     cursor: pointer;
     padding: 0;
+    border-radius: 50%;
     transition: transform 0.2s;
 }
 
 .dragon-btn img {
     width: 100%;
     height: 100%;
+    border-radius: 50%;
     object-fit: cover;
+    
 }
 
 .dragon-btn:hover {
