--- a/public/dm/dm.css
+++ b/public/dm/dm.css
@@ -10,7 +10,7 @@ body {
 header {
     background-color: white;
     text-align: center;
-    padding: 1rem 0;
+    padding: 0.3rem;
     border-style: solid;
     border-color: #d8a444;
     position: relative;
@@ -24,8 +24,8 @@ header {
 }
 
 .battlemap-container {
-    width: 60%;
-    height: 800px;  /* Use height instead of min-height */
+    width: 100%;
+    height: 30rem;  /* Use height instead of min-height */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -181,7 +181,7 @@ header {
 }
 
 #logo img {
-    height: 100px;
+    width: 15rem;
 }
 
 .container {
@@ -192,7 +192,7 @@ header {
 }
 
 .main-content {
-    width: 60%;
+    width: 100%;
     background-color: #2e2e2e;
     min-height: 1200px; /* Increased height */
     padding-bottom: 200px; /* Extra space */
